--- a/Backend/Chatbot/Dockerfile
+++ b/Backend/Chatbot/Dockerfile
@@ -1,25 +1,37 @@
-FROM python:3.12-slim
+# Base image with Ollama already installed
+FROM ollama/ollama:latest
+
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     OLLAMA_HOST=http://ollama:11434 \
     DJANGO_SETTINGS_MODULE=Chatbot.settings
+    
+# Install Python and system dependencies
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip python3-venv gcc libffi-dev libssl-dev && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install dependencies
-RUN apt-get update && apt-get install -y gcc libffi-dev libssl-dev && rm -rf /var/lib/apt/lists/*
-
-
+# Set workdir
 WORKDIR /Chatbot
 
-# Correctly copy the requirements.txt
+# Create virtual environment
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Copy requirements first (better cache usage)
 COPY requirements.txt /Chatbot/
 
-# Install Python deps
+# Install Python deps inside venv
 RUN pip install --upgrade pip && pip install --prefer-binary -r requirements.txt
 
-# Copy full backend project (assumes you're building from KU_Chatbot root)
+# Copy full backend project
 COPY . /Chatbot/
 
-EXPOSE 8000
+# Expose both Django and Ollama ports
+EXPOSE 8000 11434
+ENTRYPOINT ["/bin/bash", "-c"]
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["ollama serve & exec python manage.py runserver 0.0.0.0:8000"]
+
+
