--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,36 @@
+version: "3.9"
 name: uok_chatbot
 
 services:
-    backend:
-      build:
-        context: ./Backend/Chatbot
-        dockerfile: Dockerfile
-      command: python manage.py runserver 0.0.0.0:8000  
+  backend:
+    build:
+      context: ./Backend/Chatbot
+      dockerfile: Dockerfile
+    container_name: chatbot_app
+    volumes:
+      - ./Backend/Chatbot:/Chatbot
+      - ./Backend/Chatbot/data:/data
+      - ./data/ollama:/root/.ollama
 
-      volumes:
-        - ./Backend/Chatbot:/Chatbot
-        - chroma_db:/Chatbot/chroma_langchain_db
-      ports:
-        - "8000:8000"
-      environment:
-        - DJANGO_SETTINGS_MODULE=Chatbot.settings
-        - DEBUG=True
-        - OLLAMA_BASE_URL=http://ollama:11434
-      env_file:
-        - Backend/Chatbot/.env
+    ports:
+      - "8000:8000"   # Django API
+      - "11434:11434" # Ollama
+    env_file:
+      - ./Backend/Chatbot/.env
+    environment:
+      DJANGO_SETTINGS_MODULE: Chatbot.settings
+      OLLAMA_HOST: http://localhost:11434
 
-      depends_on:
-        - ollama  
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./frontend:/frontend/src
+    environment:
+      VITE_GOOGLE_CLIENT_ID: ${VITE_GOOGLE_CLIENT_ID}
+    depends_on:
+      - backend
 
-    frontend:
-      build:
-        context: ./frontend
-        dockerfile: Dockerfile
-      ports:
-        - "8080:8080"
-      volumes:
-        - ./frontend:/frontend/src
-      depends_on:
-        - backend
-
-      # 3. NEW OLLAMA SERVICE (the AI brain)
-    ollama:
-      image: ollama/ollama
-      ports:
-        - "11434:11434"
-      volumes:
-        - ollama_data:/root/.ollama
-      entrypoint: sh -c "
-        ollama serve &
-        sleep 5 &&
-        ollama list | grep nomic-embed-text || ollama pull nomic-embed-text &&
-        ollama list | grep mistral-q4_k_m || ollama pull mistral-q4_k_m &&
-  
-        wait
-        "
-
-volumes:
-  ollama_data:  
-  chroma_db:
